# alpaca-deterministic-fixed

./: .gitignore  CHANGELOG.md  alpaca-deterministic-fixed.cabal
src/Data/: F.hs
test/: Test.hs
